Add Outstanding Paper award

--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
+      <h2 class="subtitle has-text-centered">
+        Outstanding Paper, <a href=https://www.ml-verification.com>WFVML 2023</a>
+      </h2>
       <img
         id="teaser" 
         src="static/images/cartpole.gif" 
