--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="RL-CBF enables safety verification of learned policies for safety-preserving tasks">
   <meta name="keywords" content="RL-CBF, RL, CBF, control theory">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RL-CBF: Verification of Safe Policies using Control Barrier Functions</title>
+  <title>Safe Value Functions: Learned Critics as Hard Safety Constraints</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -69,7 +69,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">RL-CBF: Verification of Safe Policies using Control Barrier Functions</h1>
+          <h1 class="title is-1 publication-title">Safe Value Functions: Learned Critics as Hard Safety Constraints</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://daniel-ch-tan.github.io">Daniel CH Tan</a><sup>1,2</sup>,</span>
@@ -78,9 +78,11 @@
             <span class="author-block">
               <a >Robert McCarthy</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a >Dimitrios Kanoulas</a><sup>1</sup>,</span>
+              <a >Andromachi Maria Delfaki</a><sup>1</sup>,</span>
             <span class="author-block">
               <a >Zhibin Li</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a >Dimitrios Kanoulas</a><sup>1</sup>,</span>
           </div>
 
           <div class="is-size-5 publication-authors">
