--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://youtu.be/WN4LW06-Fn0"
+                <a href="https://youtu.be/WG-0f3V0hJM"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
