--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="RL-CBF enables safety verification of learned policies for safety-preserving tasks">
+        content="Enabling safety verification of learned policies for safety-preserving tasks.">
   <meta name="keywords" content="RL-CBF, RL, CBF, control theory">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Safe Value Functions: Learned Critics as Hard Safety Constraints</title>
