--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       />
 
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">RL-CBF</span> enables safety verification of learned policies for safety-preserving tasks.
+        Enabling safety verification of learned policies for safety-preserving tasks.
       </h2>
     </div>
   </div>
